--- a/Assets/Resources/Languages/PLTokenDescription.txt
+++ b/Assets/Resources/Languages/PLTokenDescription.txt
@@ -11,3 +11,4 @@
 [10] Generuje dodatkowy punkt przyrostu punktacji za każde sąsiadujące pole nie okupowane przez żeton.
 [11] Wszystkie zagrywane żetony (każdego z graczy) będą miały wartość mniejszą o 1.
 [12] Generuje podwójny przyrost punktacji. Gdy zostanie zniszczony, właściciel traci 20 punktów.
+[13] Po turze właściciela zostaje przemiony w Normalny Żeton, a gracz może wykonać dodatkową turę.
