--- a/Assets/Resources/Languages/PLAbilityDescription.txt
+++ b/Assets/Resources/Languages/PLAbilityDescription.txt
@@ -36,5 +36,5 @@
 [35] Niszczy słabsze żetony będące celem.
 [36] Zamienia miejscami 2 żetony będące celem.
 [37] Zamienia typy 2 żetonów będących celem.
-[38] Zwiększa wartość zagrywanego żetonu o 1 za każdy żeton będący celem o typie innym niż zagrywany żeton.
-[39] Właściciele żetonów będących celem redukują wartość ostatnio zagranych przez nich karty o 1.
+[38] Zwiększa wartość zagrywanego żetonu o 1 za każdy wrogi żeton będący celem o typie innym niż zagrywany żeton.
+[39] Zmienia wartość żetonu na tej karcie na 1.
