--- a/Assets/Resources/Languages/PLAbilityName.txt
+++ b/Assets/Resources/Languages/PLAbilityName.txt
@@ -34,6 +34,6 @@
 [33] Wirusowa chciwość
 [34] Strach
 [35] Potężniejsze zmiażdżenie
-[36] Podmiana
+[36] Podróż
 [37] Odwrócenie ról
 [38] Ryzykowny start
