--- a/Assets/Resources/Languages/PLUI.txt
+++ b/Assets/Resources/Languages/PLUI.txt
@@ -147,3 +147,5 @@
 [146] Ukończone
 [147] Lista puzzli
 [148] Użyte karty są umieszczane na spodzie stosu
+[149] Liczba tur pozostałych do ukończenia meczu
+[150] Pokaż menu
